@@ -5,6 +5,8 @@
    problem on Linux (fixes "could not set controlling tty" errors).
  - (djm) Merge FreeBSD PAM code: replaces PAM password auth kludge with 
    proper challenge-response module
+ - (djm) 2-clause license on loginrec.c, with permission from
+   andre@ae-35.com
 
 20030504
  - (dtucker) Bug #497: Move #include of bsd-cygwin_util.h to openbsd-compat.h.
@@ -1378,4 +1380,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2673 2003/05/10 09:28:02 djm Exp $
+$Id: ChangeLog,v 1.2674 2003/05/10 13:42:12 djm Exp $
